force-app/main/default/objects/invoice_finance_deal__c/fields/buyer_confirmed_PO_details__c.field-meta.xml
<CustomField>
    <fullName>buyer_confirmed_PO_details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>buyer confirmed PO details</label>
    <type>Checkbox</type>
</CustomField>