force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Contact_Who_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Contact_Who_Confirmed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Contact Who Confirmed</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Account_type__c</field>
            <operation>equals</operation>
            <value>Buyer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Finance Deals (Buyer Contact Who Confirmed)</relationshipLabel>
    <relationshipName>Invoice_Finance_Deals1</relationshipName>
    <type>Lookup</type>
</CustomField>