force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Country__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Country__c</fullName>
    <description>Buyer Country from the supplier buyer map</description>
    <formula>Supplier_Buyer_Map__r.Buyer_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Buyer Country from the supplier buyer map</inlineHelpText>
    <label>Buyer Country</label>
    <type>Text</type>
</CustomField>