force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Invoice_Verifier__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Invoice_Verifier__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer_Invoice_Verifier__r.FirstName + &apos; &apos; +
 Supplier_Buyer_Map__r.Buyer_Invoice_Verifier__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Invoice Verifier</label>
    <type>Text</type>
</CustomField>