force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Lead_Origin__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Lead_Origin__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer_Lead_Origin__c</formula>
    <label>Buyer Lead Origin</label>
    <type>Text</type>
</CustomField>