force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Finance Deals</relationshipLabel>
    <relationshipName>Invoice_Finance_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>