force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Name_For_Report__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name_For_Report__c</fullName>
    <formula>LEFT(  Supplier_Buyer_Map__r.Buyer__r.Name , 10 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Name For Report</label>
    <type>Text</type>
</CustomField>