force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_number_invoice_paid_back_all_time__c.field-meta.xml
<CustomField>
    <fullName>Buyer_number_invoice_paid_back_all_time__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer__r.Number_of_invoices_paid_back_all_time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer number invoice paid back all time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>