force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_other_Overdue_15_30__c.field-meta.xml
<CustomField>
    <fullName>Buyer_other_Overdue_15_30__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer__r.over_due_15_30days_invoice_count_buyer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer other Overdue 15-30</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>