force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Owner__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Owner__c</fullName>
    <label>% Buyer Owner</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>