force-app/main/default/objects/invoice_finance_deal__c/fields/buyer_primary_contact__c.field-meta.xml
<CustomField>
    <fullName>buyer_primary_contact__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer__r.Primary_Contact__r.FirstName  + &apos; &apos; + Supplier_Buyer_Map__r.Buyer__r.Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>buyer primary contact</label>
    <type>Text</type>
</CustomField>