force-app/main/default/objects/invoice_finance_deal__c/fields/buyer_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>buyer_Primary_Contact_Email__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer__r.Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Primary Contact Email</label>
    <type>Text</type>
</CustomField>