force-app/main/default/objects/invoice_finance_deal__c/fields/buyer_purchase_order_reference__c.field-meta.xml
<CustomField>
    <fullName>buyer_purchase_order_reference__c</fullName>
    <externalId>true</externalId>
    <label>buyer purchase order reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>