force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Registration_Number__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer_Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Registration Number</label>
    <type>Text</type>
</CustomField>