force-app/main/default/objects/invoice_finance_deal__c/fields/Buyer_text__c.field-meta.xml
<CustomField>
    <fullName>Buyer_text__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer text</label>
    <type>Text</type>
</CustomField>