force-app/main/default/objects/invoice_finance_deal__c/fields/BuyerCorporateReference__c.field-meta.xml
<CustomField>
    <fullName>BuyerCorporateReference__c</fullName>
    <label>BuyerCorporateReference</label>
    <length>75</length>
    <type>Text</type>
</CustomField>