force-app/main/default/objects/invoice_finance_deal__c/fields/Cacul_Spread_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Cacul_Spread_Weighted__c</fullName>
    <description>for calculation Spread weighted</description>
    <formula>Spread_invoice__c  *  advanced_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>for calculation Spread weighted</inlineHelpText>
    <label>Calcul Spread Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>