force-app/main/default/objects/invoice_finance_deal__c/fields/Calcul_Weighted_Average_Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Calcul_Weighted_Average_Overdue_Days__c</fullName>
    <description>Used for Calcul of Weighted Average overdue ( number of day )</description>
    <formula>over_due_days__c   *  funded_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for Calcul of Weighted Average overdue ( number of day )</inlineHelpText>
    <label>Calcul Weighted Average Overdue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>