force-app/main/default/objects/invoice_finance_deal__c/fields/calculated_expected_payment_date__c.field-meta.xml
<CustomField>
    <fullName>calculated_expected_payment_date__c</fullName>
    <formula>if( isblank(Actual_Repayment_Received_Date__c), 
if( isblank(Expected_Payment_Date__c),if (Due_Date__c &lt;= today(), today()+1, Due_Date__c ),Expected_Payment_Date__c),Actual_Repayment_Received_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>calculated expected payment date</label>
    <type>Date</type>
</CustomField>