force-app/main/default/objects/invoice_finance_deal__c/fields/Camelot_temp__c.field-meta.xml
<CustomField>
    <fullName>Camelot_temp__c</fullName>
    <formula>Supplier_Buyer_Map__r.Camelot_Temp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Camelot temp</label>
    <type>Checkbox</type>
</CustomField>