force-app/main/default/objects/invoice_finance_deal__c/fields/Can_send_funds_early__c.field-meta.xml
<CustomField>
    <fullName>Can_send_funds_early__c</fullName>
    <defaultValue>true</defaultValue>
    <description>if an invoice is funded before the scheduled end of the auction - can we optionally close the auction and send the funds early?</description>
    <label>Can send funds early</label>
    <type>Checkbox</type>
</CustomField>