force-app/main/default/objects/invoice_finance_deal__c/fields/cancelled_reason__c.field-meta.xml
<CustomField>
    <fullName>cancelled_reason__c</fullName>
    <label>cancelled reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>