force-app/main/default/objects/invoice_finance_deal__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <label>Carrier Name (Shipfin)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMA-CGM</fullName>
            </value>
            <value>
                <fullName>APL</fullName>
            </value>
            <value>
                <fullName>ANL</fullName>
            </value>
            <value>
                <fullName>CNC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>