force-app/main/default/objects/invoice_finance_deal__c/fields/Carrier_name_icl__c.field-meta.xml
<CustomField>
    <fullName>Carrier_name_icl__c</fullName>
    <label>Carrier name (Incomlend)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADNATCO</fullName>
            </value>
            <value>
                <fullName>Airway Bill</fullName>
            </value>
            <value>
                <fullName>ANL</fullName>
            </value>
            <value>
                <fullName>Antong Holdings (QASC)</fullName>
            </value>
            <value>
                <fullName>APL</fullName>
            </value>
            <value>
                <fullName>Arkas Line / EMES</fullName>
            </value>
            <value>
                <fullName>Asean Seas Line</fullName>
            </value>
            <value>
                <fullName>Avana Global FZCO</fullName>
            </value>
            <value>
                <fullName>Baltic Reefers Ltd</fullName>
            </value>
            <value>
                <fullName>Bansard International China Co Ltd</fullName>
            </value>
            <value>
                <fullName>Bengal Tiger Line</fullName>
            </value>
            <value>
                <fullName>BIMCO Group</fullName>
            </value>
            <value>
                <fullName>BLPL Singapore Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Boluda Lines</fullName>
            </value>
            <value>
                <fullName>Borchard Lines</fullName>
            </value>
            <value>
                <fullName>Caribbean Feeder Services</fullName>
            </value>
            <value>
                <fullName>China United Lines (CULines)</fullName>
            </value>
            <value>
                <fullName>Chipolbrok</fullName>
            </value>
            <value>
                <fullName>Chun Kyung (CK Line)</fullName>
            </value>
            <value>
                <fullName>CMA CGM Group</fullName>
            </value>
            <value>
                <fullName>CNC</fullName>
            </value>
            <value>
                <fullName>COSCO Group</fullName>
            </value>
            <value>
                <fullName>Crowley Liner Services</fullName>
            </value>
            <value>
                <fullName>DAL</fullName>
            </value>
            <value>
                <fullName>Dalian Jifa Bohai Rim Container L.</fullName>
            </value>
            <value>
                <fullName>Dalian Trawind Marine Co</fullName>
            </value>
            <value>
                <fullName>DELIVERY NOTE</fullName>
            </value>
            <value>
                <fullName>Del Monte Fresh Produce Co</fullName>
            </value>
            <value>
                <fullName>Dole Ocean Liner</fullName>
            </value>
            <value>
                <fullName>Dongjin Shg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>