force-app/main/default/objects/invoice_finance_deal__c/fields/CCY__c.field-meta.xml
<CustomField>
    <fullName>CCY__c</fullName>
    <label>CCY</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>HKD</fullName>
            </value>
            <value>
                <fullName>XXX</fullName>
            </value>
            <value>
                <fullName>a0t28000001dsIn</fullName>
                <isActive>false</isActive>
                <label>a0t28000001dsIn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>