force-app/main/default/objects/invoice_finance_deal__c/fields/CL_Buyer_CL_USD_Euiv__c.field-meta.xml
<CustomField>
    <fullName>CL_Buyer_CL_USD_Euiv__c</fullName>
    <description>Buyer CL USD Equiv</description>
    <formula>Supplier_Buyer_Map__r.Buyer_CL_USD_Equiv__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Buyer CL USD Equiv</inlineHelpText>
    <label>CL Buyer CL USD Euiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>