force-app/main/default/objects/invoice_finance_deal__c/fields/Closed_By_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Pricing__c</fullName>
    <label>Closed By Pricing</label>
    <type>DateTime</type>
</CustomField>