force-app/main/default/objects/invoice_finance_deal__c/fields/Collateral_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Amount__c</fullName>
    <inlineHelpText>This will be used to calculate the Collateral ratio amount in the Monthly report ( keep Blank )</inlineHelpText>
    <label>CollateralAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>