force-app/main/default/objects/invoice_finance_deal__c/fields/Com_Sales_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Com_Sales_Supplier__c</fullName>
    <label>Com Sales Supplier</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>