force-app/main/default/objects/invoice_finance_deal__c/fields/Com_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Com_Supplier__c</fullName>
    <label>Com Supplier test</label>
    <precision>12</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>