force-app/main/default/objects/invoice_finance_deal__c/fields/confirmed_delivery__c.field-meta.xml
<CustomField>
    <fullName>confirmed_delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>confirmed delivery</label>
    <type>Checkbox</type>
</CustomField>