force-app/main/default/objects/invoice_finance_deal__c/fields/Contact_for_Reminder_email__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Reminder_email__c</fullName>
    <label>Contact buyer for Reminder email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>