force-app/main/default/objects/invoice_finance_deal__c/fields/Count_Applied_MPR__c.field-meta.xml
<CustomField>
    <fullName>Count_Applied_MPR__c</fullName>
    <label>Count Applied MPR</label>
    <summaryForeignKey>Invoice_Allocation__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>