force-app/main/default/objects/invoice_finance_deal__c/fields/courier_fee_invoice_ccy__c.field-meta.xml
<CustomField>
    <fullName>courier_fee_invoice_ccy__c</fullName>
    <label>courier fee invoice ccy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>