force-app/main/default/objects/invoice_finance_deal__c/fields/Credit_Insurance_Amount_USD_Invoice_bas__c.field-meta.xml
<CustomField>
    <fullName>Credit_Insurance_Amount_USD_Invoice_bas__c</fullName>
    <formula>Real_Face_Value_USD__c * credit_insurance_fee_percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Insurance Amount USD/Invoice bas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>