force-app/main/default/objects/invoice_finance_deal__c/fields/credit_insurance_fee__c.field-meta.xml
<CustomField>
    <fullName>credit_insurance_fee__c</fullName>
    <formula>if( credit_insured__c =false,0,ROUND(invoice_amount__c *  credit_insurance_fee_percentage__c,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>credit insurance fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>