force-app/main/default/objects/invoice_finance_deal__c/fields/credit_insurance_fee_percentage__c.field-meta.xml
<CustomField>
    <fullName>credit_insurance_fee_percentage__c</fullName>
    <label>credit insurance fee percentage</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>