force-app/main/default/objects/invoice_finance_deal__c/fields/credit_insured__c.field-meta.xml
<CustomField>
    <fullName>credit_insured__c</fullName>
    <formula>Supplier_Buyer_Map__r.Incomlend_product__r.insured__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>credit insured</label>
    <type>Checkbox</type>
</CustomField>