force-app/main/default/objects/invoice_finance_deal__c/fields/Credit_Limit_Available__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Available__c</fullName>
    <description>Credit Limit available for this Buyer</description>
    <formula>Supplier_Buyer_Map__r.Credit_Limit_Avalaible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Credit Limit available for this Buyer</inlineHelpText>
    <label>Credit Limit Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>