force-app/main/default/objects/invoice_finance_deal__c/fields/Credit_Limit_Incomlend_for_this_Map__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Incomlend_for_this_Map__c</fullName>
    <formula>Supplier_Buyer_Map__r.CL_Incomlend_for_this_Map__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit Incomlend for this Map</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>