force-app/main/default/objects/invoice_finance_deal__c/fields/Credit_Limit_increase__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_increase__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>to click when it is not the first deal on the map , but it is additional Credit Limit</inlineHelpText>
    <label>Credit Limit increase</label>
    <type>Checkbox</type>
</CustomField>