force-app/main/default/objects/invoice_finance_deal__c/fields/CreditInsurancePercentage__c.field-meta.xml
<CustomField>
    <fullName>CreditInsurancePercentage__c</fullName>
    <defaultValue>100</defaultValue>
    <inlineHelpText>The percentage of each instrument that is covered by credit insurance default 100</inlineHelpText>
    <label>CreditInsurancePercentage</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>