force-app/main/default/objects/invoice_finance_deal__c/fields/cross_border__c.field-meta.xml
<CustomField>
    <fullName>cross_border__c</fullName>
    <formula>TEXT(Country_of_Destination__c)  &lt;&gt;  TEXT(Country_of_Origin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cross border</label>
    <type>Checkbox</type>
</CustomField>