force-app/main/default/objects/invoice_finance_deal__c/fields/Data_Check_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Data_Check_Accounting__c</fullName>
    <formula>auto_status__c  + &quot;-&quot; + &quot;FDR:&quot;+TEXT(FD_amount_USD_phase_trigger__c) +&quot;-&quot;+&quot;SDR:&quot;+TEXT(SD_amount_USD_phase_trigger__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Check Accounting</label>
    <type>Text</type>
</CustomField>