force-app/main/default/objects/invoice_finance_deal__c/fields/Date_advance_amount_empty__c.field-meta.xml
<CustomField>
    <fullName>Date_advance_amount_empty__c</fullName>
    <formula>IF( ISNULL( advance_send_to_supplier_date__c )=TRUE , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date advance amount empty</label>
    <type>Checkbox</type>
</CustomField>