force-app/main/default/objects/invoice_finance_deal__c/fields/Days_of_grace_period__c.field-meta.xml
<CustomField>
    <fullName>Days_of_grace_period__c</fullName>
    <label>Days of grace period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>