force-app/main/default/objects/invoice_finance_deal__c/fields/Days_Since_Financing__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Financing__c</fullName>
    <formula>TODAY()- advance_send_to_supplier_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Financing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>