force-app/main/default/objects/invoice_finance_deal__c/fields/Days_to_due_date__c.field-meta.xml
<CustomField>
    <fullName>Days_to_due_date__c</fullName>
    <formula>Due_Date__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to due date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>