force-app/main/default/objects/invoice_finance_deal__c/fields/Days_to_receive_funds__c.field-meta.xml
<CustomField>
    <fullName>Days_to_receive_funds__c</fullName>
    <formula>advance_send_to_supplier_date__c  -  submitted_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to receive funds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>