force-app/main/default/objects/invoice_finance_deal__c/fields/Deadline_for_buyer_acknowledgment__c.field-meta.xml
<CustomField>
    <fullName>Deadline_for_buyer_acknowledgment__c</fullName>
    <formula>DATEVALUE(Listing_Start__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline for buyer acknowledgment</label>
    <type>Date</type>
</CustomField>