force-app/main/default/objects/invoice_finance_deal__c/fields/Default_total_supplier_discount__c.field-meta.xml
<CustomField>
    <fullName>Default_total_supplier_discount__c</fullName>
    <formula>Supplier_Buyer_Map__r.Total_Supplier_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default total supplier discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>