force-app/main/default/objects/invoice_finance_deal__c/fields/Delta_Actual_repayment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Delta_Actual_repayment_Due_Date__c</fullName>
    <formula>Actual_Repayment_Received_Date__c - Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Actual repayment-Due Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>