force-app/main/default/objects/invoice_finance_deal__c/fields/Delta_created_InpPogress__c.field-meta.xml
<CustomField>
    <fullName>Delta_created_InpPogress__c</fullName>
    <formula>advance_send_to_supplier_date__c -  Datevalue( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>number of days  between submission and financing</inlineHelpText>
    <label>Delta created - InProgress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>