force-app/main/default/objects/invoice_finance_deal__c/fields/Delta_Created_Today__c.field-meta.xml
<CustomField>
    <fullName>Delta_Created_Today__c</fullName>
    <formula>TODAY() -  Datevalue( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Created-Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>