force-app/main/default/objects/invoice_finance_deal__c/fields/Delta_in_Ready_in_Pgrss_2__c.field-meta.xml
<CustomField>
    <fullName>Delta_in_Ready_in_Pgrss_2__c</fullName>
    <description>delta in day between Advance amount Credited to e-wallet date date and ready for posting</description>
    <formula>IF ( Date_advance_amount_empty__c = TRUE ,(Today()-ready_for_posting_date__c),
(advance_send_to_supplier_date__c  -   ready_for_posting_date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>delta in day between Advance amount Credited to e-wallet date date and ready for posting</inlineHelpText>
    <label>Delta in Ready in Pgrss 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>