force-app/main/default/objects/invoice_finance_deal__c/fields/Delta_in_Ready_in_Pgrss__c.field-meta.xml
<CustomField>
    <fullName>Delta_in_Ready_in_Pgrss__c</fullName>
    <description>Delta in days between ready for posting and In progress</description>
    <formula>advance_send_to_supplier_date__c   -  ready_for_posting_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Delta in days between ready for posting and In progress</inlineHelpText>
    <label>Delta in Ready in Pgrss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>