force-app/main/default/objects/invoice_finance_deal__c/fields/Delta_Waiting_allocation_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Delta_Waiting_allocation_in_Progress__c</fullName>
    <formula>advance_send_to_supplier_date__c -  Waiting_for_Allocations_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Waiting allocation - in Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>