force-app/main/default/objects/invoice_finance_deal__c/fields/deposit_already_paid__c.field-meta.xml
<CustomField>
    <fullName>deposit_already_paid__c</fullName>
    <label>deposit already paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>