force-app/main/default/objects/invoice_finance_deal__c/fields/discount_amount_if_fully_funded__c.field-meta.xml
<CustomField>
    <fullName>discount_amount_if_fully_funded__c</fullName>
    <formula>requested_amount__c  *  ( financing_period_for_calcs__c   /30) * Total_Supplier_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>discount amount if fully funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>